# Document

./: .gitignore  .pdm-python  .readthedocs.yaml  README.md  docusaurus.config.js  mkdocs.yml  package.json  pyproject.toml  requirements.txt  sidebars.js
.github/workflows/: deploy-docs.yml
docs/: NAV.md  ecosystem.md  index.md  projects.md  write_verification.py
docs/ariadne/: NAV.md  index.md
docs/ariadne/appendix/: faq.md
docs/ariadne/extra/: NAV.md  cooldown.md  log.md  scheduler.md
docs/ariadne/feature/: NAV.md  background.md  base-parser.md  commander.md  configuration.md  msg-chain.md  twilight.md
docs/assets/: extra.css
docs/avilla/: NAV.md  index.md  why-avilla.md
docs/avilla/interlude/: elements.md  message-received.md
docs/avilla/overture/: quick_start.md
docs/avilla/tutorial/: message-send.md  msg-event-filter.md  quick-start.mdx
docs/broadcast/: NAV.md  the-future.md  the-origin-of-everything.md
docs/broadcast/abyss/: NAV.md  about-abyss.md  dispatchable-with-schema.md  dispatcher-inject.md  executor-and-exectarget.md  just-executor-no-eventbus.md  more-than-eventbus.md  universal-event-or-meta-event.md
docs/broadcast/advance/: NAV.md  dispatcher-mixin.md  event-listener.md  event-propagation-and-priority.md  headless-decorator.md  proxy-mode.md  (+3 more)
docs/elaina-talk/: NAV.md  event_lock.md
docs/other/: NAV.md  kayaku.md  statv.md
docs/saya/: NAV.md  behaviour.md  channel.md  index.md  lifecycle.md  schema.md
overrides/partials/: copyright.html
src/components/: HomepageFeatures.module.css
src/pages/: index.js  index.module.css
(+35 files in other folders)
